First attempt at the CSS, and added a few classes to html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <header>
+    <header class=header>
         <h1>John Gallagher</h1>
         <nav>
             <ul>
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-        <section id="about-me">
+        <section class="about" id="about-me">
             <h2>About Me</h2>
             <p>
                 I moved out to Boulder, Colorado from Lancaster, Pennsylvania in 2015 because I wanted to live
@@ -45,7 +45,7 @@
                 more satisfying than figuring out a problem.
             </p>
         </section>
-        <section id="work">
+        <section class= "projects" id="work">
             <h2>Work</h2>
             <a href="https://gallaghj13.github.io/Horiseon-Refactoring/">
                 <img src="./assets/images/E22CF06F-0736-43B4-83D5-3F66F66F7CC7.jpeg" alt="Picture of a website. The website is for a marketing agency and shows a group of three people around a table having a meeting.">
@@ -64,7 +64,7 @@
             </a>
         </section>
 
-        <footer id="contact-me">
+        <footer class="contact" id="contact-me">
             <h2>Contact Me</h2>
             <p>717-989-3931</p>
             <p>gallagherj0913@gmail.com</p>
