--- a/index.html
+++ b/index.html
@@ -16,28 +16,31 @@
         <nav>
             <ul>
                 <li>
-                    <a href="about-me">About Me</a>
+                    <a href="#about-me">About Me</a>
                 </li>
                 <li>
-                    <a href="work">Work</a>
+                    <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="contact-me">Contact Me</a>
+                    <a href="#contact-me">Contact Me</a>
                 </li>
             </ul>
         </nav>
     </header>
 
+    <figure class="hero">
+        <img src="assets/images/pexels-picjumbocom-4457409.jpg" alt="Image of a rock formation that is white with black cracks through it.">
+    </figure>
+
     <main>
-        <section class="about" id="about-me">
+        <section class="content" id="about-me">
             <h2>About Me</h2>
             <p>
                 I moved out to Boulder, Colorado from Lancaster, Pennsylvania in 2015 because I wanted to live
                 in the mountains. I took a job in a restaraunt to make ends meet while I spent as much time as I
                 could climbing. So, for the past six years I've been bartending and managing at the Dark Horse in 
                 Boulder. 
-            </p>
-            <p>
+                <br></br>
                 Over the past year, with the pandemic, and the subsequent shutdowns and restrictions on the service
                 industry, I realized that it was time for me to move on. I thought of learning how to code because
                 of friends in the industry. They encouraged me to pursue coding, so, here I am in the DU coding bootcamp.
@@ -45,31 +48,35 @@
                 more satisfying than figuring out a problem.
             </p>
         </section>
-        <section class= "projects" id="work">
+        <section class= "content" id="work">
             <h2>Work</h2>
-            <a href="https://gallaghj13.github.io/Horiseon-Refactoring/">
-                <img src="./assets/images/E22CF06F-0736-43B4-83D5-3F66F66F7CC7.jpeg" alt="Picture of a website. The website is for a marketing agency and shows a group of three people around a table having a meeting.">
-            </a>
-            <a href="placeholder1">
-                <img src="./assets/" alt="This is a placeholder image.">
-            </a>
-            <a href="placeholder2">
-                <img src="./assets/" alt="This is a placeholder image.">
-            </a>
-            <a href="placeholder3">
-                <img src="./assets/" alt="This is a placeholder image.">
-            </a>
-            <a href="placeholder4">
-                <img src="./assets/" alt="This is a placeholder image.">
-            </a>
+            <div>
+                <a href="https://gallaghj13.github.io/Horiseon-Refactoring/">
+                    <img id="larger-img" src="./assets/images/E22CF06F-0736-43B4-83D5-3F66F66F7CC7.jpeg" alt= "Picture of a website. The website is for a marketing agency and shows a group of three people around a table having a meeting.">
+                </a>
+                <a href="placeholder1">
+                    <img src="./assets/images/350x150.png" alt="This is a placeholder image.">
+                </a>
+                <a href="placeholder2">
+                    <img src="./assets/images/350x150.png" alt="This is a placeholder image.">
+                </a>
+                <a href="placeholder3">
+                    <img src="./assets/images/350x150.png" alt="This is a placeholder image.">
+                </a>
+                <a href="placeholder4">
+                    <img src="./assets/images/350x150.png" alt="This is a placeholder image.">
+                </a>
+            </div>
         </section>
 
-        <footer class="contact" id="contact-me">
+        <footer class="content" id="contact-me">
             <h2>Contact Me</h2>
-            <p>717-989-3931</p>
-            <p>gallagherj0913@gmail.com</p>
-            <p><a href="https://github.com/gallaghj13">Github</a></p>
-            <p><a href="https://www.linkedin.com/in/john-gallagher-122b86100/">LinkedIn</a></p>
+            <div>
+                <p>717-989-3931</p>
+                <p>gallagherj0913@gmail.com</p>
+                <p><a href="https://github.com/gallaghj13">Github</a></p>
+                <p><a href="https://www.linkedin.com/in/john-gallagher-122b86100/">LinkedIn</a></p>
+            </div>
         </footer>
         
     </main>
