--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                 <li>
                     <a href="#contact-me">Contact Me</a>
                 </li>
+                <li>
+                    <a href="resume" target="_blank">Resume</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -34,7 +37,9 @@
 
     <main>
         <section class="content" id="about-me">
-            <h2>About Me</h2>
+            <h2>About
+                <br>
+                Me</h2>
             <p>
                 I moved out to Boulder, Colorado from Lancaster, Pennsylvania in 2015 because I wanted to live
                 in the mountains. I took a job in a restaraunt to make ends meet while I spent as much time as I
@@ -51,32 +56,35 @@
         <section class= "content" id="work">
             <h2>Work</h2>
             <div>
-                <a href="https://gallaghj13.github.io/Horiseon-Refactoring/">
+                <a href="https://gallaghj13.github.io/Horiseon-Refactoring/" target="_blank" class="project-1 project">
                     <img id="larger-img" src="./assets/images/E22CF06F-0736-43B4-83D5-3F66F66F7CC7.jpeg" alt= "Picture of a website. The website is for a marketing agency and shows a group of three people around a table having a meeting.">
+                        
                 </a>
-                <a href="placeholder1">
-                    <img src="./assets/images/350x150.png" alt="This is a placeholder image.">
+                <a href="placeholder1" target="_blank" class="project">
+                    <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
                 </a>
-                <a href="placeholder2">
-                    <img src="./assets/images/350x150.png" alt="This is a placeholder image.">
+                <a href="placeholder2" target="_blank" class="project">
+                    <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
                 </a>
-                <a href="placeholder3">
-                    <img src="./assets/images/350x150.png" alt="This is a placeholder image.">
+                <a href="placeholder3" target="_blank" class="project">
+                    <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
                 </a>
-                <a href="placeholder4">
-                    <img src="./assets/images/350x150.png" alt="This is a placeholder image.">
+                <a href="placeholder4" target="_blank" class="project">
+                    <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
                 </a>
             </div>
         </section>
 
         <footer class="content" id="contact-me">
-            <h2>Contact Me</h2>
-            <div>
-                <p>717-989-3931</p>
-                <p>gallagherj0913@gmail.com</p>
-                <p><a href="https://github.com/gallaghj13">Github</a></p>
-                <p><a href="https://www.linkedin.com/in/john-gallagher-122b86100/">LinkedIn</a></p>
-            </div>
+            <h2>Contact 
+                <br>
+                Me</h2>
+            <ul class="contact-info">
+                <li>717-989-3931</li>
+                <li>gallagherj0913@gmail.com</li>
+                <li><a href="https://github.com/gallaghj13">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/john-gallagher-122b86100/">LinkedIn</a></li>
+            </ul>
         </footer>
         
     </main>
