small changes to html and css, as well as adding a pdf of resume

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#about-me">About Me</a>
-                </li>
-                <li>
-                    <a href="#work">Work</a>
+                    <a href="./assets/images/Resume2020.doc.pdf" target="_blank">Resume</a>
                 </li>
                 <li>
                     <a href="#contact-me">Contact Me</a>
                 </li>
                 <li>
-                    <a href="resume" target="_blank">Resume</a>
+                    <a href="#work">Work</a>
+                </li>
+                <li>
+                    <a href="#about-me">About Me</a>
                 </li>
             </ul>
         </nav>
@@ -58,19 +58,23 @@
             <div>
                 <a href="https://gallaghj13.github.io/Horiseon-Refactoring/" target="_blank" class="project-1 project">
                     <img id="larger-img" src="./assets/images/E22CF06F-0736-43B4-83D5-3F66F66F7CC7.jpeg" alt= "Picture of a website. The website is for a marketing agency and shows a group of three people around a table having a meeting.">
-                        
+                    <!-- <h3>Horiseon-Refactoring</h3>  -->
                 </a>
                 <a href="placeholder1" target="_blank" class="project">
                     <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
+                    <!-- <h3>Project-1</h3> -->
                 </a>
                 <a href="placeholder2" target="_blank" class="project">
                     <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
+                    <!-- <h3>Project-2</h3> -->
                 </a>
                 <a href="placeholder3" target="_blank" class="project">
                     <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
+                    <!-- <h3>Project-3</h3> -->
                 </a>
                 <a href="placeholder4" target="_blank" class="project">
                     <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
+                    <!-- <h3>Project-4</h3> -->
                 </a>
             </div>
         </section>
@@ -82,8 +86,8 @@
             <ul class="contact-info">
                 <li>717-989-3931</li>
                 <li>gallagherj0913@gmail.com</li>
-                <li><a href="https://github.com/gallaghj13">Github</a></li>
-                <li><a href="https://www.linkedin.com/in/john-gallagher-122b86100/">LinkedIn</a></li>
+                <li><a href="https://github.com/gallaghj13" target="_blank">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/john-gallagher-122b86100/" target="_blank">LinkedIn</a></li>
             </ul>
         </footer>
         
