added figure tags

--- a/index.html
+++ b/index.html
@@ -56,26 +56,36 @@
         <section class= "content" id="work">
             <h2>Work</h2>
             <div>
-                <a href="https://gallaghj13.github.io/Horiseon-Refactoring/" target="_blank" class="project-1 project">
-                    <img id="larger-img" src="./assets/images/E22CF06F-0736-43B4-83D5-3F66F66F7CC7.jpeg" alt= "Picture of a website. The website is for a marketing agency and shows a group of three people around a table having a meeting.">
-                    <!-- <h3>Horiseon-Refactoring</h3>  -->
-                </a>
-                <a href="placeholder1" target="_blank" class="project">
-                    <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
-                    <!-- <h3>Project-1</h3> -->
-                </a>
-                <a href="placeholder2" target="_blank" class="project">
-                    <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
-                    <!-- <h3>Project-2</h3> -->
-                </a>
-                <a href="placeholder3" target="_blank" class="project">
-                    <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
-                    <!-- <h3>Project-3</h3> -->
-                </a>
-                <a href="placeholder4" target="_blank" class="project">
-                    <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
-                    <!-- <h3>Project-4</h3> -->
-                </a>
+                <figure class="project-tag">
+                    <a href="https://gallaghj13.github.io/Horiseon-Refactoring/" target="_blank" class="project-1 project">
+                        <img id="larger-img" src="./assets/images/E22CF06F-0736-43B4-83D5-3F66F66F7CC7.jpeg" alt= "Picture of a website. The website is for a marketing agency and shows a group of three people around a table having a meeting.">
+                        <h3>Horiseon-Refactoring</h3> 
+                    </a>
+                </figure>
+                <figure class="project-tag2">
+                    <a href="placeholder1" target="_blank" class="project">
+                        <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
+                        <h3>Project-1</h3>
+                    </a>
+                </figure>
+                <figure class="project-tag2">
+                    <a href="placeholder2" target="_blank" class="project">
+                        <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
+                        <h3>Project-2</h3>
+                    </a>
+                </figure>
+                <figure class="project-tag2">
+                    <a href="placeholder3" target="_blank" class="project">
+                        <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
+                        <h3>Project-3</h3>
+                    </a>
+                </figure>
+                <figure class="project-tag2">
+                    <a href="placeholder4" target="_blank" class="project">
+                        <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
+                        <h3>Project-4</h3>
+                    </a>
+                </figure>
             </div>
         </section>
 
