--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-
+<!-- Header and Nav Bar, includes links to the sections on the page
+and a link to my resume -->
     <header class=header>
         <h1>John Gallagher</h1>
         <nav>
@@ -30,11 +31,13 @@
             </ul>
         </nav>
     </header>
-
+    <!-- Hero Image -->
     <figure class="hero">
         <img src="assets/images/pexels-picjumbocom-4457409.jpg" alt="Image of a rock formation that is white with black cracks through it.">
     </figure>
-
+    <!-- Main Content of Page, for desktop view all h tags take up about 25%
+    of the left hand side of the page, and the sections main content takes
+    up 75% of the page towards the right -->
     <main>
         <section class="content" id="about-me">
             <h2>About
@@ -53,6 +56,8 @@
                 more satisfying than figuring out a problem.
             </p>
         </section>
+        <!-- Projects section, put all project images under figure tags 
+        to create a parent to tie the project labels (h3) to-->
         <section class= "content" id="work">
             <h2>Work</h2>
             <div>
@@ -88,7 +93,7 @@
                 </figure>
             </div>
         </section>
-
+        <!-- Footer section with links to github and linkedIn -->
         <footer class="content" id="contact-me">
             <h2>Contact 
                 <br>
