updated resume and links to projects

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ and a link to my resume -->
         <nav>
             <ul>
                 <li>
-                    <a href="./assets/images/Resume2020.doc.pdf" target="_blank">Resume</a>
+                    <a href="./assets/images/Resume2021.pdf" target="_blank">Resume</a>
                 </li>
                 <li>
                     <a href="#contact-me">Contact Me</a>
@@ -62,27 +62,27 @@ and a link to my resume -->
             <h2>Work</h2>
             <div>
                 <figure class="project-tag">
-                    <a href="https://gallaghj13.github.io/Horiseon-Refactoring/" target="_blank" class="project-1 project">
-                        <img id="larger-img" src="./assets/images/E22CF06F-0736-43B4-83D5-3F66F66F7CC7.jpeg" alt= "Picture of a website. The website is for a marketing agency and shows a group of three people around a table having a meeting.">
-                        <h3>Horiseon-Refactoring</h3> 
+                    <a href="https://carlincb.github.io/Marvel_Project_1/" target="_blank" class="project-1 project">
+                        <img id="larger-img" src="./assets/images/marvelbackground.jpg" alt="Picture of Marvel Superheroes">
+                        <h3>Marvel Fan Page</h3> 
                     </a>
                 </figure>
                 <figure class="project-tag2">
-                    <a href="placeholder1" target="_blank" class="project">
-                        <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
-                        <h3>Project-1</h3>
+                    <a href="https://gallaghj13.github.io/Horiseon-Refactoring/" target="_blank" class="project">
+                        <img src="./assets/images/E22CF06F-0736-43B4-83D5-3F66F66F7CC7.jpeg" alt= "Picture of a website. The website is for a marketing agency and shows a group of three people around a table having a meeting." >
+                        <h3>Horiseon-Refactoring</h3>
                     </a>
                 </figure>
                 <figure class="project-tag2">
-                    <a href="placeholder2" target="_blank" class="project">
-                        <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
-                        <h3>Project-2</h3>
+                    <a href="https://gallaghj13.github.io/Daily-Planner-App/" target="_blank" class="project">
+                        <img src="./assets/images/Work-Day-App.jpeg" alt="Picture of website. Shows the date and time slots to add tasks." >
+                        <h3>Daily Planner App</h3>
                     </a>
                 </figure>
                 <figure class="project-tag2">
-                    <a href="placeholder3" target="_blank" class="project">
-                        <img src="./assets/images/350x150.png" alt="This is a placeholder image." >
-                        <h3>Project-3</h3>
+                    <a href="https://gallaghj13.github.io/Weather-Dashboard/" target="_blank" class="project">
+                        <img src="./assets/images/Weather-App.jpeg" alt="Picture of website displaying the current weather and a five day forecast for Boulder, Colorado." >
+                        <h3>Weather App</h3>
                     </a>
                 </figure>
                 <figure class="project-tag2">
